Fix for horizontal scrolling on iPhone

--- a/assets/css/prismjs.scss
+++ b/assets/css/prismjs.scss
@@ -1,3 +1,4 @@
 .highlight {
     font-size: 14px;
+    -webkit-overflow-scrolling: touch;
 }
